--- a/Translucence.theme.css
+++ b/Translucence.theme.css
@@ -1,5 +1,5 @@
 :root {
-    --app-bg: url(https://i.pinimg.com/originals/f6/fc/88/f6fc88d7a52b63a983fe92337d32f0f3.gif);
+    --app-bg: url(https://img.freepik.com/premium-photo/black-dark-greenish-blue-dramatic-night-sky-gloomy-ominous-storm-rain-clouds-background-cloudy-thund_820340-36924.jpg);
     --app-blur: 6px;
     --app-margin: 24px;
     --app-radius: 10px;
