--- a/Translucence.theme.css
+++ b/Translucence.theme.css
@@ -133,6 +133,13 @@ body {
     filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.5));
 }
 
+.field_b69b77 > div > div > div {
+  filter: blur(5px);
+}
+.field_b69b77 > div > div > div:hover {
+  filter: blur(0);
+}
+
 ::selection {
     background: hsla(var(--accent-hsl), 0.65);
     color: var(--accent-text-color);
